Solidify Exception Format (#70)
* Initial commit. Set up the problem library

* Google Java Format

* Added vue updates

* Fix broken build

* Reconfigured error system

* Fixed pipelines

* Removed unneeded file

* WIP integrating MSW

* Allowed dev against MSW mocks

* Removed unneeded fontawesome intialization

* removed top-level await

---------

Co-authored-by: github-actions <>